--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
     --secondary-color:#000000;
 }
 body {
+  box-shadow: 1px 1px 20px #012290f7
+       ,1px 1px 40px #012290f7,1px 1px 80px #012290f7;
     color: var(--secondary-color);
     background: var(--primary-color);
     scroll-behavior: smooth;
@@ -47,7 +49,7 @@ body {
 /* Default styles */
 .navbar a {
     display: inline;
-    font-size: 25px;
+    font-size: 15px;
     color: var(--secondary-color);
     text-decoration: none;
     font-weight: 500;
@@ -61,8 +63,8 @@ body {
 /* Media query for smaller screens */
 /* Default styles for larger screens */
 .navbar {
-    display: flex;
-    gap: 20px;
+    display: inline;
+padding: auto;
 }
 
 #menu-icon {
@@ -265,6 +267,7 @@ body {
     align-items: center;
     }
     .about-text h2{
+        margin-top: 170px;
         font-size: 60px;
     }
     .about-text h2 span{
@@ -347,16 +350,16 @@ body {
     }
     .service-list{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
-   gap: 2rem;
-
+    grid-template-columns: repeat(auto-fill, minmax(325px,1fr));
+    gap: 2rem;
     margin-top: 50px;
-   padding: 1rem;
+    padding: 1rem;
     align-items: center;
     }
-    .service-list div:hover{
-        background: #f57921;
+    .service-list  div:hover{
+        background:pink;
         color: black;
+            transform: translateY(-35px);
     }
     .service-list div{
         background: transparent;
@@ -366,13 +369,16 @@ body {
         border-right: 10px;
         border-radius: 20px;
         transition: background 0.5s,transform 0.5s;
-       box-shadow: 1px 1px 20px #012290f7
-       ,1px 1px 40px #012290f7,1px 1px 80px #012290f7;
+     
     
     }
     .service-list div i{
         font-size: 50px;
         margin-bottom: 30px;
+    }
+    .service-list div p{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 15px;
     }
     .service-list div h2{
         font-size: 30px;
@@ -385,12 +391,13 @@ body {
     font-size: 18px;
     margin-top: 20px;
     display: inline-block;
+    margin-top: 40px;
  
  }   
  .read{
-   display: inline-block;
-padding: 12px 28px;
-    background: #0ef;
+    display: inline-block;
+    padding: 12px 28px;
+    background: rgb(90, 151, 155);
     border-radius: 40px;
     font-size: 16px;
     color: #081b29;
@@ -398,38 +405,41 @@ padding: 12px 28px;
     text-decoration: none;
     font-weight: 600;
     opacity: 0;
+    margin-left: 75px;
+    margin-top: 25px;
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
     box-shadow: 0 0 5px cyan, 0 0 25px cyan;
  }
 .container{
     padding: 90px;
+    justify-content: center;
 }
 .read:hover{
-    box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;
+    box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan;
 
 }
-.service-list div:hover{
-    transform: translatey(-35px);
-}
+
 
 /*skill section css*/
-section{
+.skillsec{
+    position: relative;
     display: flex;
-    flex-wrap: wrap;
+justify-content: center;
+
 }
 .container1{
-   width: 90%;
-  max-width: 600px;
+   width: 60%;
+  max-width: 500px;
    padding: 2rem;
-   margin:0 auto; 
+  
 }
 .heading {
     text-align: center; /* This centers the text horizontally */
     text-decoration: underline;
     text-underline-offset: 10px;
     text-decoration-thickness: 5px;
-    margin-bottom: 50px;
+    margin-bottom: 15px;
   }
 
 .bar{
@@ -456,7 +466,7 @@ margin-bottom: 0;
 }
 .technical-bar .bar .progress-line{
     height: 0.5rem;
-    background: rgb(107, 5, 241);
+    background: rgb(7, 7, 7);
     position: relative;
     border-radius: 10px;
     width: 100%;
@@ -465,7 +475,7 @@ margin-bottom: 0;
 
 .technical-bar .bar .progress-line span{
 height: 100%;
-background-color: rgb(77, 255, 0);
+background-color: #0ef;
 position: absolute;
 border-radius: 10px;
 animation: animate 1s cubic-bezier(1,0,0.5,1) forwards;
@@ -495,7 +505,7 @@ transform-origin: left;
 .progress-line span::after{
   position: absolute;
   padding: 1px 8px;
-  background-color: #2b0df2f1;
+  background-color: #0b0b0bf1;
   color: #ffff;
   font-size: 12px;
   border-radius: 3px;
@@ -546,7 +556,8 @@ content:"90%";
 .radial-bar .radial-bars {
     width: 50%;
     height: 170px;
-    margin-bottom: 10px;
+margin-top: 30px;
+    margin-bottom: 60px;
     position: relative;
 }
 
@@ -569,7 +580,7 @@ content:"90%";
  
 .radial-bar .radial-bars .path {
     stroke-width: 10;
-    stroke: rgb(0, 255, 26);
+    stroke:#0ef;
     fill: transparent;
     stroke-dasharray: 502;
     stroke-dashoffset: 502;
@@ -591,12 +602,12 @@ content:"90%";
 }
 
 
-.radial-bars .text {
+.radial-bar .text {
     width: 100%;
     position: absolute;
     text-align: center;
-    left: 50%;
-    bottom: -5px;
+    left: 50%; 
+    bottom: -20px;
     transform: translateX(-50%);
     font-size: 17px;
     font-weight: 500;
@@ -682,9 +693,11 @@ content:"90%";
    margin-top: 5rem;  
 }
 .contact-text h2{
+    margin-top: 60px;
     font-size: 4rem;
     line-height: 1;
     text-align: center;
+    margin-bottom: 50px;
 }
 .contact-text h2 span{
 color: #0ef;
@@ -696,6 +709,7 @@ color: #0ef;
     font-weight: 600;
 }
 .contact-text p{
+    padding: 20px;
     color: var(--secondary-color);
     font-size: 20px;
     line-height: 30px;
@@ -708,35 +722,8 @@ color: #0ef;
     margin-bottom: 20px;
     display: block;
 }
-.contact-list i{
-display: inline-block;
-color: #0ef;
-font-size: 20px;
-font-weight: 600;
-transition: all .40s ease;
-}
-.contact-list li a:hover{
-    transform: scale(1.01) translateY(-5px);
-    color: #0ef;
-}
-.contact-icon i{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    background: transparent;
-    border: 2px solid #0ef;
-    border-radius: 50%;
-    font-size: 20ex;
-    color: #0ef;
-    text-decoration: none;
-    margin: 30px 15px 30px 0;
-    transition: .5s ease;
-    opacity: 0;
-    animation: slideLeft 1s ease forwards;
-    animation-delay: calc(.2s*var(--i));
-}
+
+
 .contact-icon i:hover{
     box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;
 
@@ -744,25 +731,29 @@ transition: all .40s ease;
 .contact-form form input,form textarea{
     border: none;
     outline: none;
-    width: 100%;
+    width: 70%;
     padding: 1rem;
     background: #555557;
     color: #000;
     font-size: 1rem;
+    margin-left: 100px;
     font-weight: 600;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
     border-radius: 0.5rem;
+box-shadow: 0 0 5px blue,0 0 25px blue,0 0 75px blue;
 }
-
+.contact-form:hover{
+    transform: scale(1.1);
+}
 .contact-form textarea{
     resize: none;
-    height: 220ox;
+    height: 100px;
     
 }
 .contact-form .send{
     display: inline-block;
     padding: 14px 60px; 
-     background:#0ef;
+     background:rgb(14, 105, 111);
      border-radius: 40px;
      font-size: 16px;
      color: #081b29;
@@ -775,7 +766,8 @@ transition: all .40s ease;
      box-shadow: 0 0 5px cyan, 0 0 25px cyan;    
 }
 .contact-form form .send:hover{
-    box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;
+    transform:scaleY(1.3);
+    box-shadow: 0 0 5px cyan, 0 0 50px cyan;
 
 }
 
@@ -803,11 +795,12 @@ transition: all .40s ease;
 
 .main-text{
  padding-top: 130px;
- margin-top: 200px;   
+ 
 }
 .main-text h2{
     font-size: 60px;
     line-height: 1;
+    margin-bottom: 70px;
     text-align: center;
 }
 .main-text h2 span{
